--- a/index.html
+++ b/index.html
@@ -248,6 +248,14 @@
       <span class="checkmark"></span>
       <span class="check-label">Wrap</span>
     </label>
+    <a href="#" id="refresh-button" title="Refresh" class="filefunction">
+			<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" style="margin:2px 15px 0 20px;"><path d="M21.5 2v6h-6M2.5 22v-6h6M2 11.5a10 10 0 0 1 18.8-4.3M22 12.5a10 10 0 0 1-18.8 4.2"/></svg>
+		</a>
+		<label class="container">
+			<input type="checkbox" id="live-mode-checkbox" />
+			<span class="checkmark"></span>
+			<span class="check-label">Live</span>
+		</label>
   </div>
   <div class="main-container">
     <div id="editor"></div>
@@ -319,9 +327,32 @@
       editor.setValue(defaultStuff);
       editor.clearSelection();
 
-      updatePreview();
+			// Live Mode and Refresh Button
+			const liveModeCheckbox = document.getElementById('live-mode-checkbox');
+			const refreshButton = document.getElementById('refresh-button');
 
-      editor.session.on('change', updatePreview);
+			// Update preview only in Live Mode
+			function updatePreview() {
+				if (liveModeCheckbox.checked) {
+					const code = editor.getValue();
+					document.getElementById("preview").srcdoc = code;
+				}
+			}
+
+			// Refresh button functionality
+			refreshButton.addEventListener('click', function () {
+				const code = editor.getValue();
+				document.getElementById("preview").srcdoc = code;
+			});
+
+			// Listen for editor changes only if Live Mode is enabled
+			editor.session.on('change', function () {
+				if (liveModeCheckbox.checked) {
+					updatePreview();
+				}
+			});
+
+      updatePreview();
 
       function updatePreview() {
         var code = editor.getValue();
